--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header ui-view="header"></header>
-	<main ui-view="content"><p>Test page. Hello the </p></main>
+	<main ui-view="content"><p>Test page. Hello</p></main>
     <footer ui-view="footer"></footer>
     
 	<!--[if lt IE 9]><!-- inject:shim:js --><!-- endinject --><![endif]-->
