Search box work

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -16,11 +16,11 @@
     <![endif]-->
 </head>
 <body>
-    <div header></div>
+    <div akin-header></div>
 	<main>
         <div ng-view></div>
 	</main>
-    <div footer></div>
+    <div akin-footer></div>
 
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
