reworked search navigation

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -10,6 +10,7 @@
 	<!-- TODO: add Open Graph meta tags, and possibly Twitter and Google+ too. -->
 	
 	<!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
