Added skeleton category and app pages

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -1,4 +1,4 @@
-<div>
+<div id="search-results">
     <p ng-if="search.results.categories.length == 0 && !search.results.initialState">
         Sorry! We could not find anything relating to <span>{{search.searchTerm}}</span>.
     </p>
