--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -1,3 +1,12 @@
-<div>
-    <h1>App Page</h1>
+<div ng-show="app.data.name">
+    <h1>{{app.data.name}} <span>for {{app.data.platform | platformFriendlyName}}</span></h1>
+    <p>{{app.data.desc}}</p>
+    <ul ng-if="app.data.categories.length > 0">
+        <li ng-repeat="category in app.data.categories">
+            <h4><a href="/{{category.platform}}/category/{{category.urlName}}">{{category.name}}</a></h4>
+            <p>
+                {{category.shortDesc}}
+            </p>
+        </li>
+    </ul>
 </div>
