--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -7,7 +7,7 @@
     </p>
     <ul ng-if="search.results.categories.length > 0" ng-class="search.results.searchInProgress ? 'disabled' : ''">
         <li ng-repeat="category in search.results.categories">
-            <h4><a href="/{{category.platform}}/category/{{category.urlName}}">{{category.name}}</a></h4>
+            <h4><a href="{{ url.createCategoryUrl(category.platform, category.urlName) }}">{{category.name}}</a></h4>
             <p>
                 {{category.shortDesc}}
             </p>
