--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
 	<meta name="language" content="english">
     <meta name="description" content="Search by category for great iOS apps.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title data-ng-bind="pageTitle.pageTitle">app Akin</title>
     <base href="/">
 
@@ -23,7 +25,6 @@
 
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/bower_components/angular-resource/angular-resource.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <!-- inject:appakin-scripts --><script src="/public/scripts/app-scripts.js"></script><!-- endinject -->
     <!-- inject:appakin-templates --><script src="/public/templates/app-templates.js"></script><!-- endinject -->
