more work on home page

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -19,8 +19,11 @@
     <![endif]-->
 </head>
 <body>
-    <header data-akin-header></header>
-	<main data-ng-view></main>
+    <div class="content-wrapper">
+        <header data-akin-header></header>
+        <main data-ng-view></main>
+        <div class="push"></div>
+    </div>
     <footer data-akin-footer></footer>
 
     <script src="/bower_components/angular/angular.js"></script>
