--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -20,7 +20,7 @@
                           click-activation="false" data="search.autoComplete.terms"
                           on-type="search.updateAutoCompleteTerms"
                           is-active="search.autoComplete.active"></autocomplete>
-            <button type="submit"><img src="/public/images/magnifying-glass.png"></button>
+            <!--<button type="submit"><img src="/public/images/magnifying-glass.png"></button>-->
         </fieldset>
     </form>
 </div>
