--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -1,4 +1,4 @@
-<p class="call-to-action"><a href="/raters"><em>Want to help us?</em> Click here for more info!</a></p>
+<p class="call-to-action"><a href="/raters">Want to help us? Click here for more info!</a></p>
 <div class="footer-nav">
     <ul>
         <li><a href="/">Home</a>&nbsp;&middot;&nbsp;</li>
