--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -3,15 +3,15 @@
         <fieldset class="platform-input">
             <label>
                 <input type="radio" name="platform" value="android" ng-model="search.platform"/>
-                <img src="/public/images/android-240.png">
+                <div><img src="/public/images/android-240.png"></div>
             </label>
             <label>
                 <input type="radio" name="platform" value="ios" ng-model="search.platform"/>
-                <img src="/public/images/app-store-240.png">
+                <div><img src="/public/images/app-store-240.png"></div>
             </label>
             <label>
                 <input type="radio" name="platform" value="winphone" ng-model="search.platform"/>
-                <img src="/public/images/winphone-240.png" class="last">
+                <div><img src="/public/images/winphone-240.png" class="last"></div>
             </label>
         </fieldset>
         <fieldset class="search-input">
