--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -1,4 +1,4 @@
-<p class="call-to-action"><a href="/raters">Want to help us? Click here for more info!</a></p>
+<p class="call-to-action"><a href="/raters">Help us and earn!&nbsp;&nbsp;Click for more info.</a></p>
 <div class="footer-nav">
     <ul>
         <li><a href="/">Home</a>&nbsp;&middot;&nbsp;</li>
@@ -7,4 +7,7 @@
         <li><a href="/privacy">Privacy & Cookies</a></li>
     </ul>
 </div>
-<p class="copyright">&copy; appAkin Ltd 2014. All Rights Reserved.</p>
+<div class="footer-copyright">
+    <span><img src="/public/images/appakin-logo-jade.png"></span>
+    <p class="copyright">&copy; appAkin Ltd 2014. All Rights Reserved.</p>
+</div>
