--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -1,8 +1,8 @@
 <div ng-switch="location.path() === '/'">
     <div ng-switch-when="true">
         <ul class="social-media-links">
-            <li><a href="http://www.facebook.com" class="facebook-link"></a></li>
-            <li><a href="http://www.twitter.com" class="twitter-link"></a></li>
+            <li><a href="http://www.facebook.com" class="facebook-link" target="_blank"></a></li>
+            <li><a href="http://www.twitter.com" class="twitter-link" target="_blank"></a></li>
         </ul>
     </div>
     <div ng-switch-default>
