Reworked page gridj

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -18,12 +18,13 @@
     <![endif]-->
 </head>
 <body>
-    <div class="content-wrapper">
+    <!--<div class="content-wrapper">-->
         <header data-akin-header></header>
         <main data-ng-view></main>
-        <div class="push"></div>
-    </div>
-    <footer data-akin-footer></footer>
+        <!--<div class="push"></div>-->
+        <footer data-akin-footer></footer>
+    <!--</div>-->
+
 
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
