--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -1,4 +1,3 @@
 <div>
     <h1>About Page</h1>
-    <div>Icons made by Icons8 from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a></div>
-</div>
+<div>
