--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -17,7 +17,7 @@
         <fieldset class="search-input">
             <autocomplete ng-model="search.searchTerm"
                           placeholder="search.getPlaceholderText()"
-                          click-activation="false"
+                          click-activation="true"
                           data="search.autoComplete.terms"
                           on-type="search.updateAutoCompleteTerms"
                           is-active="search.autoComplete.active"></autocomplete>
