old way of doing searchbox header

--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -2,5 +2,5 @@
     <div class="akin-logo">
         <img src="/public/images/appakin-logo-jade.png">
     </div>
-    <div akin-searchbox></div>
+    <div akin-searchbox-home></div>
 </div>
