--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -6,6 +6,9 @@
         </ul>
     </div>
     <div ng-switch-default>
-        <div akin-searchbox></div>
+        <div class="content-wrapper">
+            <span class="content-wrapper"><img class="akin-logo" src="/public/images/appakin-logo-jade.png"></span>
+            <div akin-searchbox class="searchbox-wrapper"></div>
+        </div>
     </div>
 </div>
