--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -8,6 +8,6 @@
     </ul>
 </div>
 <div class="footer-copyright">
-    <span><img src="/public/images/appakin-logo-jade.png"></span>
-    <p class="copyright">&copy; appAkin Ltd 2014. All Rights Reserved.</p>
+    <img src="/public/images/appakin-logo-jade.png">
+    <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.</p>
 </div>
