--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -18,17 +18,14 @@
     <![endif]-->
 </head>
 <body>
-    <!--<div class="content-wrapper">-->
-        <header data-akin-header></header>
-        <main data-ng-view></main>
-        <!--<div class="push"></div>-->
-        <footer data-akin-footer></footer>
-    <!--</div>-->
-
+    <header data-akin-header></header>
+    <main data-ng-view></main>
+    <footer data-akin-footer></footer>
 
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/bower_components/angular-touch/angular-touch.js"></script>
     <!-- inject:appakin-scripts --><script src="/public/scripts/app-scripts.js"></script><!-- endinject -->
     <!-- inject:appakin-templates --><script src="/public/templates/app-templates.js"></script><!-- endinject -->
 </body>
