--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -1,12 +1,5 @@
 <div>
     <form ng-submit="search.submitSearch(1)" class="searchbox">
-        <fieldset class="platform-input">
-            <ul>
-                <li ng-repeat="tab in platformTabs"
-                        ng-class="{active: isActiveTab(tab.name)}"
-                        ng-click="onTabClick(tab.name)">{{tab.friendlyName}}</li>
-            </ul>
-        </fieldset>
         <fieldset class="search-input">
             <autocomplete ng-model="search.searchTerm"
                           placeholder="search.getPlaceholderText()"
@@ -14,6 +7,23 @@
                           data="search.autoComplete.terms"
                           on-type="search.updateAutoCompleteTerms"
                           is-active="search.autoComplete.active"></autocomplete>
+        </fieldset>
+        <fieldset class="platform-menu btn-group" dropdown is-open="status.isOpen">
+            <button type="button" class="btn-menu"
+                    dropdown-menu="ddSelectOptions"
+                    dropdown-model="ddSelectSelected"
+                    dropdown-item-label="text"
+                    dropdown-onchange="dropdownOnchange(selected)">
+                {{ddSelectSelected.text}}<span class="caret"></span>
+            </button>
+            <!--<button type="button" class="dropdown-toggle" dropdown-toggle>-->
+                <!--Apple App Store <span class="caret"></span>-->
+            <!--</button>-->
+            <!--<ul class="dropdown-menu" role="menu">-->
+                <!--<li>Apple App Store</li>-->
+                <!--<li>Android</li>-->
+                <!--<li>Windows Phone</li>-->
+            <!--</ul>-->
         </fieldset>
     </form>
 </div>
