--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -5,9 +5,8 @@
             <li><a href="http://www.twitter.com" class="twitter" target="_blank"></a></li>
         </ul>
     </div>
-    <div ng-switch-default>
-        <a class="akin-logo" href="/"></a>
-        <!--<img class="akin-logo" src="/public/images/appakin-logo-jade.png">-->
+    <div ng-switch-default class="header-wrapper">
+        <img class="akin-logo" src="/public/images/appakin-logo-jade.png">
         <div akin-searchbox class="searchbox-wrapper"></div>
     </div>
 </div>
