--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -8,6 +8,5 @@
     </ul>
 </div>
 <div class="footer-copyright">
-    <img src="/public/images/appakin-logo-jade.png">
-    <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.</p>
+    <p class="copyright">&copy; 2014 SearchAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-jade.png"></p>
 </div>
