--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -6,7 +6,7 @@
         </ul>
     </div>
     <div ng-switch-default class="header-wrapper">
-        <img class="akin-logo" src="/public/images/appakin-logo-jade.png">
+        <a href="/" class="akin-logo"><img src="/public/images/appakin-logo-jade.png"></a>
         <div akin-searchbox class="searchbox-wrapper"></div>
     </div>
 </div>
