--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -8,5 +8,5 @@
     </ul>
 </div>
 <div class="footer-copyright">
-    <p class="copyright">&copy; 2014 SearchAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-jade.png"></p>
+    <p class="copyright">&copy; 2014 searchAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-jade.png"></p>
 </div>
