Fixed web site build error

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -1,4 +1,4 @@
-<div id="search-results">
+<div id="search-results" ng-cloak>
     <p class="error"
        ng-show="search.results.serverError && !search.results.searchInProgress">
         There was a problem getting your search result. Please try again, or if the problem persists please try later.
