--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -16,6 +16,8 @@
     <!--[if lt IE 9]>
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
+
+    <!--<link rel="apple-touch-icon" href="/my-icon.png" /> make it 144x144 -->
 </head>
 <body>
     <header data-akin-header></header>
