Improved handling of user changing platform on search results page

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -18,7 +18,7 @@
                 <ul ng-if="search.results.categories.length > 0">
                     <li ng-repeat="category in search.results.categories"
                         class="category-search-result">
-                        <h4><a href="{{ url.createCategoryUrl(category.platform, category.urlName) }}">{{category.name}}</a></h4>
+                        <h4><a href="{{ url.createCategoryUrl(category.platform, category.urlName) }}">{{category.name + ' ' + category.platform}}</a></h4>
                         <p>
                             {{category.shortDesc}}
                         </p>
